--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,21 +1,22 @@
-<% @user ||= current_user %>
 <div class="stats">
-	<table summary="User stats">
-		<tr>
-			<td>
-				<a href="<%= following_user_path(@user) %>">
-					<span id="following" class="stat">
-						<%= @user.following.count %> following
-					</span>
-				</a>
-			</td>
-			<td>
-				<a href="<%= followers_user_path(@user) %>">
-					<span id="followers" class="stat">
-						<%= pluralize(@user.followers.count, "follower") %>
-					</span>
-				</a>
-			</td>
-		</tr>
-	</table>
+  <table summary="User stats">
+    <tr>
+      <td>
+        <a href="<%= following_user_path(current_user) %>">
+          <span id="following" class="stat">
+            <%= current_user.following.count %> following
+          </span>
+        </a>
+      </td>
+      <td>
+        <a href="<%= followers_user_path(current_user) %>">
+          <span id="followers" class="stat">
+            <%= pluralize(current_user.followers.count, "follower") %>
+          </span>
+        </a>
+      </td>
+      <td><%= link_to "#{current_user.smacks.count} smacks", smacks_user_path(current_user) %></td>
+      <td><%= link_to "#{current_user.redemptions.count} redemptions", redemptions_user_path(current_user) %></td>
+    </tr>
+  </table>
 </div>
