implemented post sharing through facebook and twitter

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
       <%= javascript_include_tag 'http://shots.snap.com/ss/d83b52a2e254661d23d1c0974a8b36c3/snap_shots.js' %>
   <% end %>
   <%= yield(:head) %>
+  <%= yield :meta %>
+  <%= yield :og_meta %>
 </head>
 <script type="text/javascript">
 <%= yield :js %>
