--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -32,4 +32,11 @@
     posted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.try(:username) %>.
   </div>
   <br class="clear"/>
+  <div style="float: right;" >
+        <%= render(:partial => "posts/facebook_share", :locals => {:post => post, :image => "facebook_32.png"}) %>
+        <%= render(:partial => "posts/twitter_share", :locals => {:post => post, :image => "twitter_32.png"}) %>
+        <%#= link_to(image_tag("email.png", :border => 0), share_through_email_form_post_path(post), :remote => true, :method => "GET") %>
+  </div>
+
+
 </li>
