--- a/app/views/posts/_facebook_share.html.erb
+++ b/app/views/posts/_facebook_share.html.erb
@@ -1,3 +1,3 @@
-<a class="share_icon facebook" title="Share on Facebook" target="_blank" href="http://www.facebook.com/sharer.php?u=<%= opengraph_post_url(post) %>" onclick="window.open('http://www.facebook.com/sharer.php?u=<%= opengraph_post_url(post) %>', 'newWindow', 'width=626, height=436'); return false;">
+<a class="share_icon facebook" title="Share on Facebook" target="_blank" href="http://www.facebook.com/sharer.php?u=http://developers.facebook.com<%= polymorphic_url([post.postable, post])%>" onclick="window.open('http://www.facebook.com/sharer.php?u=<%= opengraph_post_url(post) %>', 'newWindow', 'width=626, height=436'); return false;">
   <%=  image_tag(image, :border => 0) %>
 </a>
