--- a/app/views/posts/_twitter_share.html.erb
+++ b/app/views/posts/_twitter_share.html.erb
@@ -1,3 +1,3 @@
-<a class="share_icon twitter" title="Share on Twitter" target="_blank" onclick="window.open('http://twitter.com/share?url=<%= polymorphic_url([post.postable, post])%>&text= <%=  post.title %> <%= post.summary %>,'); return false;">
+<a class="share_icon twitter" title="Share on Twitter" target="_blank" onclick="window.open('http://twitter.com/share?url=<%= polymorphic_url([post.postable, post])%>&text=Check out this post on Campusmack.com : (<%=  post.title %>) <%#= post.summary %>,'); return false;">
   <%=  image_tag(image, :border => 0) %>
 </a>
