--- a/app/views/posts/opengraph.html.erb
+++ b/app/views/posts/opengraph.html.erb
@@ -2,7 +2,7 @@
   }) -%>
 <% open_graph_meta_tags({ "og:title" => "#{SITE_NAME}",
     "og:type" => "article",
-    "og:url" => "#{opengraph_post_url(@post)}",
+    "og:url" => "#{ polymorphic_url([post.postable, post])}",
     "og:site_name" => "#{SITE_NAME}",
     "og:description" => " #{@post.title} <br/> #{@post.summary} "
   }) -%>
