--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,69 +1,70 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
-<head>
-  <title><%= title %></title>
-  <%= csrf_meta_tag %>
-  <%= javascript_include_tag 'jquery', 'application', 'jquery.min', 'jquery_ujs', 'rails.validations', '/javascripts/fancybox/jquery.fancybox-1.3.4.pack.js' %>
-  <%= stylesheet_link_tag 'new', 'button', 'lionbuttons', 'jquery.fancybox-1.3.4.css' %>
+  <head>
+    <title><%= title %></title>
+    <%= csrf_meta_tag %>
+    <%= javascript_include_tag 'jquery', 'application', 'jquery.min', 'jquery_ujs', 'rails.validations', '/javascripts/fancybox/jquery.fancybox-1.3.4.pack.js' %>
+    <%= stylesheet_link_tag 'new', 'button', 'lionbuttons', 'jquery.fancybox-1.3.4.css' %>
     <%= javascript_include_tag "facebox" %>
     <%= stylesheet_link_tag 'facebox' %>
-  <% unless Rails.env == 'development' || Rails.env == 'test' %>
+    <%= stylesheet_link_tag 'new' %>
+    <% unless Rails.env == 'development' || Rails.env == 'test' %>
       <%= javascript_include_tag 'http://shots.snap.com/ss/d83b52a2e254661d23d1c0974a8b36c3/snap_shots.js' %>
-  <% end %>
-  <%= yield(:head) %>
-  <%= yield :meta %>
-  <%= yield :og_meta %>
-</head>
-<script type="text/javascript">
-<%= yield :js %>
-$(function () {
-<%= yield :jq %>
-});
-</script>
-<body id="homepage">
-<div id="wrapper">
-  <div class="header">
-    <div class="container">
-      <a href="/" class="sitename"><h2>Campusmack</h2></a>
-      <%= user_nav %>
-    </div>
-  </div>
-
-  <%= main_nav %>
-
-  <div id="content">
-    <%= render 'layouts/left_sidebar' %>
-    <div class="container">
-      <% flash.each do |key, value| %>
-          <%= content_tag(:div, value, :class => "flash #{key}") %>
-      <% end %>
-      <%= yield(:above) %>
-      <div class="block shadowed">
-        <div class="inner-boundary">
-          <div class="inner-border">
-            <%= yield %>
-          </div>
+    <% end %>
+    <%= yield(:head) %>
+    <%= yield :meta %>
+    <%= yield :og_meta %>
+  </head>
+  <script type="text/javascript">
+  <%= yield :js %>
+    $(function () {
+  <%= yield :jq %>
+    });
+  </script>
+  <body id="homepage">
+    <div id="wrapper">
+      <div class="header">
+        <div class="container">
+          <a href="/" class="sitename"><h2>Campusmack</h2></a>
+          <%= user_nav %>
         </div>
       </div>
-      <%= yield(:below) %>
+
+      <%= main_nav %>
+
+      <div id="content">
+        <%= render 'layouts/left_sidebar' %>
+        <div class="container">
+          <% flash.each do |key, value| %>
+            <%= content_tag(:div, value, :class => "flash #{key}") %>
+          <% end %>
+          <%= yield(:above) %>
+          <div class="block shadowed">
+            <div class="inner-boundary">
+              <div class="inner-border">
+                <%= yield %>
+              </div>
+            </div>
+          </div>
+          <%= yield(:below) %>
+        </div>
+      </div>
+      <div style="height: 125px;clear:both;"></div>
     </div>
-  </div>
-  <div style="height: 125px;clear:both;"></div>
-</div>
-<div id="footer">
-  <div class="container">
-    <div class="copyright">
-      <p>
-        <span>Copyright © 2011 </span>|
-        <span><a href="/about">About</a></span>|
-        <span><a href="/terms">Terms</a></span>|
-        <span><a href="/contact-us">Contact Us</a></span>
-      </p>
+    <div id="footer">
+      <div class="container">
+        <div class="copyright">
+          <p>
+            <span>Copyright © 2011 </span>|
+            <span><a href="/about">About</a></span>|
+            <span><a href="/terms">Terms</a></span>|
+            <span><a href="/contact-us">Contact Us</a></span>
+          </p>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
 
 
-</body>
+  </body>
 </html>
