--- a/app/views/posts/opengraph.html.erb
+++ b/app/views/posts/opengraph.html.erb
@@ -1,7 +1,7 @@
 <% meta_tags({ "description" => " #{@post.title} <br/> #{@post.summary} "
   }) -%>
 <% open_graph_meta_tags({ "og:title" => "#{SITE_NAME}",
-    "og:type" => "article",
+    "og:type" => "post",
     "og:url" => "#{ polymorphic_url([@post.postable, @post])}",
     "og:site_name" => "#{SITE_NAME}",
     "og:description" => " #{@post.title} <br/> #{@post.summary} "
