--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title><%= title %></title>
+    
     <%= csrf_meta_tag %>
     <%= javascript_include_tag 'jquery', 'application', 'jquery.min', 'jquery_ujs', 'rails.validations', '/javascripts/fancybox/jquery.fancybox-1.3.4.pack.js' %>
     <%= stylesheet_link_tag 'new', 'button', 'lionbuttons', 'jquery.fancybox-1.3.4.css' %>
@@ -17,10 +18,10 @@
     <%= yield :og_meta %>
   </head>
   <script type="text/javascript">
-  <%= yield :js %>
-    $(function () {
-  <%= yield :jq %>
-    });
+<%= yield :js %>
+  $(function () {
+<%= yield :jq %>
+  });
   </script>
   <body id="homepage">
     <div id="wrapper">
@@ -36,9 +37,11 @@
       <div id="content">
         <%= render 'layouts/left_sidebar' %>
         <div class="container">
-          <% flash.each do |key, value| %>
-            <%= content_tag(:div, value, :class => "flash #{key}") %>
-          <% end %>
+          <div id="flash-messages">
+            <% flash.each do |key, value| %>
+              <%= content_tag(:div, value, :class => "flash #{key}") %>
+            <% end %>
+          </div>
           <%= yield(:above) %>
           <div class="block shadowed">
             <div class="inner-boundary">
