--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,5 +1,8 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 <span class="required">* Required fields</span>
+
+<%= render(:partial => "/contacts/import_form") -%>
+
 <% @college = College.all %>
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:method => :put}, :validate => true) do |f| %>
     <%= devise_error_messages! %>
