--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,25 +1,48 @@
 <h1>Listing contacts</h1>
 
 <table>
-  <tr>
-    <th>Name</th>
-    <th>Email</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+  <tr >
+    <td style="padding-right: 10px;padding-left: 10px; margin-top: 2px;">
+      <% @contact_groups = ContactGroup.find_all_by_user_id(current_user)  %>
+      <ul>
+        <% @contact_groups.each do |contact_group|   %>
+          <li>
 
-<% @contacts.each do |contact| %>
-  <tr>
-    <td><%= contact.name %></td>
-    <td><%= contact.email %></td>
-    <td><%= link_to 'Show', contact %></td>
-    <td><%= link_to 'Edit', edit_contact_path(contact) %></td>
-    <td><%= link_to 'Destroy', contact, :confirm => 'Are you sure?', :method => :delete %></td>
+            <%= contact_group.name %>
+          </li>
+        <% end %>
+      </ul>
+    </td>
+    <td>
+      <table>
+
+        <tr>
+          <th style="padding-right: 10px;padding-left: 10px;" ><input type="checkbox" value="0" name="cb" ></input></th>
+          <th style="padding-right: 10px;padding-left: 10px;" >Name</th>
+          <th style="padding-right: 10px;padding-left: 10px;" >Email</th>
+          <th></th>
+          <th></th>
+          <th></th>
+        </tr>
+
+        <% @contacts.each do |contact| %>
+          <tr>
+            <td style="padding-right: 10px;padding-left: 10px;" > <input class="chk_box" type="checkbox" value="<%= contact.id %>" name="cb[]" ></input> </td>
+            <td style="padding-right: 10px;padding-left: 10px;" ><%= contact.name %></td>
+            <td style="padding-right: 10px;padding-left: 10px;" ><%= contact.email %></td>
+            <td></td>
+            <td style="padding-right: 10px;padding-left: 10px;" ><%= link_to 'Show', contact %></td>
+            <td style="padding-right: 10px;padding-left: 10px;" ><%= link_to 'Edit', edit_contact_path(contact) %></td>
+            <td style="padding-right: 10px;padding-left: 10px;" ><%= link_to 'Destroy', contact, :confirm => 'Are you sure?', :method => :delete %></td>
+          </tr>
+        <% end %>
+
+      </table>
+      <br />
+
+      <%= link_to 'New Contact', new_contact_path %>
+    </td>
+    <td><%= link_to("Add To Group", add_to_group_form_contact_groups_path(@contact), :method => "GET", :remote => true) %></td>
   </tr>
-<% end %>
 </table>
 
-<br />
-
-<%= link_to 'New Contact', new_contact_path %>
