--- a/app/views/shared/_search_fields.html.erb
+++ b/app/views/shared/_search_fields.html.erb
@@ -19,11 +19,11 @@
           <%= f.submit "Go!", :name => nil %>
           <%= f.hidden_field :order, :name => "order", :value => @order || "created_at desc",:id => "sort_field" %>
           <%= f.label "Sort by:"%>
-          <%= link_to "Post Created#{ @order[0,10] == "created_at" ? @order[-4,4] == "desc" ? " ▼" : " ▲" : "" }", "?order=created_at%20#{@order[-4,4] == "desc" ? "asc" : "desc"}", :id => "sort_created_at", :class => "sort_switch" %>
+          <%= link_to "Post Created#{ @order[0,10] == "created_at" ? @order[-4,4] == "desc" ? " ▼" : " ▲" : "" }", "?order=created_at%20#{@order[0,10] == "created_at" && @order[-4,4] == "desc" ? "asc" : "desc"}", :id => "sort_created_at", :class => "sort_switch" %>
           |
-          <%= link_to "Votes For#{ @order[0,8] == "up_votes" ? @order[-4,4] == "desc" ? " ▼" : " ▲" : "" }", "?order=up_votes%20#{@order[-4,4] == "desc" ? "asc" : "desc"}", :id => "sort_up_votes", :class => "sort_switch" %>
+          <%= link_to "Votes For#{ @order[0,8] == "up_votes" ? @order[-4,4] == "desc" ? " ▼" : " ▲" : "" }", "?order=up_votes%20#{@order[0,8] == "up_votes" && @order[-4,4] == "desc" ? "asc" : "desc"}", :id => "sort_up_votes", :class => "sort_switch" %>
           |
-          <%= link_to "Votes Against#{ @order[0,10] == "down_votes" ? @order[-4,4] == "desc" ? " ▼" : " ▲" : "" }", "?order=down_votes%20#{@order[-4,4] == "desc" ? "asc" : "desc"}", :id => "sort_down_votes", :class => "sort_switch" %>
+          <%= link_to "Votes Against#{ @order[0,10] == "down_votes" ? @order[-4,4] == "desc" ? " ▼" : " ▲" : "" }", "?order=down_votes%20#{@order[0,10] == "down_votes" && @order[-4,4] == "desc" ? "asc" : "desc"}", :id => "sort_down_votes", :class => "sort_switch" %>
       <% end %>
     </td>
   </tr>
