--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,31 +11,41 @@
     <br class="clear"/>
   </div>
   <% if @post.photo %>
-      <div class="photo">
-        <img src="<%= @post.photo.url(:large) %>" alt=""/>
-      </div>
+    <div class="photo">
+      <img src="<%= @post.photo.url(:large) %>" alt=""/>
+    </div>
   <% end %>
-  <%= link_to "News post", @post.news_post.url unless @post.news_post.blank? %>
+  <% if @post.news_post %>
+    <%= link_to "News post", @post.news_post.url %>
+    <% unless @post.news_post.image_file_name.blank? %>
+      <div class="photo">
+        <img src="<%= @post.news_post.image_url(:large) %>" alt=""/>
+      </div>
+    <% end %>
+    <% unless @post.news_post.video_url.blank? %>
+      <div class="content"><%= youtube_embed(@post.news_post.video_url, true) %></div>
+    <% end %>
+  <% end %>
   <% if @post.video %>
-      <div class="content"><%= youtube_embed(@post.video.url, true) %></div>
+    <div class="content"><%= youtube_embed(@post.video.url, true) %></div>
   <% end %>
   <div class="summary"><%= @post.summary %>
     <% if @post.summary && params[:action] != 'show' %>
-        <%= link_to " [more...]", [@parent, @post] %>
+      <%= link_to " [more...]", [@parent, @post] %>
     <% end %>
   </div>
   <br class="clear"/>
   <% if signed_in? %>
-      <%= form_for [@post, Comment.new], :remote => true do |f| %>
-          <%= render '/shared/comments', :f => f %>
-          <div>
-            <%= f.submit "Submit Comment" %>
-          </div>
-      <% end %>
+    <%= form_for [@post, Comment.new], :remote => true do |f| %>
+      <%= render '/shared/comments', :f => f %>
+        <div>
+          <%= f.submit "Submit Comment" %>
+        </div>
+    <% end %>
   <% end %>
   <% if @post.comments.any? %>
-      <h2>Comments:</h2>
-      <%= will_paginate(@comments) %>
+    <h2>Comments:</h2>
+    <%= will_paginate(@comments) %>
   <% end %>
   <div class="comments">
     <%= render :partial => @post.comments %>
