--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -2,13 +2,14 @@
 
 <table>
   <tr >
-    <td style="padding-right: 10px;padding-left: 10px; margin-top: 2px;">
+    <td style="padding-right: 10px;padding-left: 10px; margin-top: 2px;vertical-align: top; margin: 10px">
       <% @contact_groups = ContactGroup.find_all_by_user_id(current_user)  %>
-      <ul>
+      <ul style=" background-color: #EEEEEE;">
+        <li><%= link_to('All', contacts_path(),:method => "GET", :remote => false) %></li>
         <% @contact_groups.each do |contact_group|   %>
           <li>
-
-            <%= contact_group.name %>
+            <%= link_to(contact_group.name, contacts_path(:id=>contact_group.id),:method => "GET", :remote => false) %>
+              <%#= contact_group.name %>
           </li>
         <% end %>
       </ul>
@@ -17,7 +18,7 @@
       <table>
 
         <tr>
-          <th style="padding-right: 10px;padding-left: 10px;" ><input type="checkbox" value="0" name="cb" ></input></th>
+          <th style="padding-right: 10px;padding-left: 10px;" ><!--input type="checkbox" value="0" name="cb" ></input--></th>
           <th style="padding-right: 10px;padding-left: 10px;" >Name</th>
           <th style="padding-right: 10px;padding-left: 10px;" >Email</th>
           <th></th>
@@ -42,7 +43,8 @@
 
       <%= link_to 'New Contact', new_contact_path %>
     </td>
-    <td><%= link_to("Add To Group", add_to_group_form_contact_groups_path(@contact), :method => "GET", :remote => true) %></td>
+    <td style="vertical-align: top;margin: 20px;" ><%= link_to("Add To Group", add_to_group_form_contact_groups_path(@contact), :method => "GET", :remote => true) %></td>
   </tr>
 </table>
+
 
