sharing video with email is fixed

--- a/app/views/posts/share_through_email_form.html.erb
+++ b/app/views/posts/share_through_email_form.html.erb
@@ -89,7 +89,7 @@
                end
               body = body + "<a href='#{polymorphic_url([@post.postable,@post])}'>#{@post.title}</a>"
               if @post.video
-                body = body +  '<div class="content">'+ youtube_embed(@post.video.url, true) +'</div>'
+                  body = body +  '<div class="content">' + @post.video.url+ '</div>'
               end
               body = body + '<div class="summary">' + @post.summary + '</div></div>'
 
