--- a/app/views/posts/share_through_email_form.html.erb
+++ b/app/views/posts/share_through_email_form.html.erb
@@ -11,33 +11,42 @@
   });
 
   function get_group_emails() {
-    $.ajax({
-      type: "POST",
-      url: "<%= get_group_emails_contacts_path() -%>",
-      data: $(".chk_box").serialize()
-    });
-  }
+  //$("#message_to").hide("slow");
+  $("#message_to").html("<%= escape_javascript(image_tag('ajax-loader.gif')) %>");
+  //$("#message_to").show("slow");
+  $.ajax({
+    type: "POST",
+    url: "<%= get_group_emails_contacts_path() -%>",
+    data: $(".chk_box").serialize()
+    //beforeSend: function(xhr, settings){$("#message_to").html("<%= escape_javascript(image_tag('ajax-loader.gif')) %>");}
+  });
+}
+function sending_email_wait()
+{
+  $('#email_sending').html("<span style='padding-top:20px; margin-top: 10px'><%= escape_javascript(image_tag('ajax-cb-loader.gif')) %></span>");
+}
 
-  $(document).ready(function(){
-    $(".chk_box").click(get_group_emails);
-      
-    $("#message_body").keydown(function(event) {
-    });
+$(document).ready(function(){
+  $(".chk_box").click(get_group_emails);
+  $(".share_by_email").click(sending_email_wait);
+  $("#message_body").keydown(function(event) {
+  });
 
-    $('.group_cb').click(function(){
-      $(this).find(':checkbox').attr('checked', true );
-    },function(){
-      $(this).find(':checkbox').attr('checked', false );
-    });
+  $('.group_cb').click(function(){
+    $(this).find(':checkbox').attr('checked', true );
+  },function(){
+    $(this).find(':checkbox').attr('checked', false );
+  });
 
     
-  }
+}
 );
 </script>
 <%  form_tag(share_through_email_post_path(@post), {:remote => true, :method => :post}) do -%>
   <table>
     <tr>
-      <td><%= label_tag("message[to]", "To") %></td>
+      <td>
+      <%= label_tag("message[to]", "To") %></td>
       <td>
   <%#= text_area_tag("message[to]", @to_emails, {:rows => 1, :cols => 5}) %>
         <% if !params[:smack].present? %>
@@ -50,7 +59,7 @@
         <% else %>
           <% @contact_groups = ContactGroup.find_all_by_user_id(current_user)  %>
           <div >
-            <div style="float: left;min-width: 80px">
+            <div style="min-width: 80px;">
               <ul>
                 <li>
                   <%= '<input class="chk_box" type="checkbox" value="0" name="cb[]" ></input>'.html_safe %>
@@ -71,7 +80,8 @@
                 <% end %>
               </ul>
             </div>
-            <%= '<div id="message_to" style="float: right; min-width: 100px; margin: 10px" ></div>'.html_safe %>
+            <%= '<div id="message_to" style="text-align: left; min-width: 100px; margin: 10px" ></div>'.html_safe %>
+            <%= text_area_tag("message[to]", @to_emails, {:rows => 1, :cols => 5, :style => "height:80px;width:380px;padding-right:5px;margin-right:10px;margin-top:10px;"}) %>
           </div>
         <%  end %>
       </td>
@@ -80,20 +90,20 @@
       <td><%= label_tag("message[body]", "Message:") %></td>
 
       <%
-             body = '<h1>'+@post.title + '</h1><div class="post"><div class="top">'
-             body = body +  'posted '+ time_ago_in_words(@post.created_at) +' ago by '+ @post.user.try(:username)
-             body = body +  '<br class="clear"/></div>'
-               if @post.photo
-                body = body +  '<div class="photo">'
-                body = body +    '<img src="'+@post.photo.url(:large) +'"'+ 'alt=""/></div>'
-               end
-              body = body + "<a href='#{polymorphic_url([@post.postable,@post])}'>#{@post.title}</a>"
-              if @post.video
-                  body = body +  '<div class="content">' + @post.video.url+ '</div>'
-              end
-              body = body + '<div class="summary">' + @post.summary + '</div></div>'
+      body = '<h1>'+@post.title + '</h1><div class="post"><div class="top">'
+      body = body +  'posted '+ time_ago_in_words(@post.created_at) +' ago by '+ @post.user.try(:username)
+      body = body +  '<br class="clear"/></div>'
+      if @post.photo
+        body = body +  '<div class="photo">'
+        body = body +    '<img src="'+@post.photo.url(:large) +'"'+ 'alt=""/></div>'
+      end
+      body = body + "<a href='#{polymorphic_url([@post.postable,@post])}'>#{@post.title}</a>"
+      if @post.video
+        body = body +  '<div class="content">' + @post.video.url+ '</div>'
+      end
+      body = body + '<div class="summary">' + @post.summary + '</div></div>'
 
-            %>
+    %>
 
 
 
@@ -107,33 +117,33 @@
         <div id ="email_preview" >
 
 
-            <h1><%= @post.title %></h1>
-            <div class="post">
-              <div class="top">
-                posted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.try(:username) %>.
-                <br class="clear"/>
-              </div>
-              <% if @post.photo %>
-                <div class="photo">
-                  <img src="<%= @post.photo.url(:large) %>" alt=""/>
-                </div>
-              <% end %>
-              <%= link_to "News post", @post.news_post.url unless @post.news_post.blank? %>
-              <% if @post.video %>
-                <div class="content"><%= youtube_embed(@post.video.url, true) %></div>
-              <% end %>
-              <div class="summary"><%= @post.summary %></div>
+          <h1><%= @post.title %></h1>
+          <div class="post">
+            <div class="top">
+              posted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.try(:username) %>.
+              <br class="clear"/>
             </div>
+            <% if @post.photo %>
+              <div class="photo">
+                <img src="<%= @post.photo.url(:large) %>" alt=""/>
+              </div>
+            <% end %>
+            <%= link_to "News post", @post.news_post.url unless @post.news_post.blank? %>
+            <% if @post.video %>
+              <div class="content"><%= youtube_embed(@post.video.url, true) %></div>
+            <% end %>
+            <div class="summary"><%= @post.summary %></div>
+          </div>
 
 
 
 
-            
+
         </div></td>
     </tr>
     <tr>
       <td>&nbsp;</td>
-      <td><%= submit_tag("Share") %></td>
+      <td><%= submit_tag("Share",:class=>"share_by_email") %><span style="padding-top:20px; margin-top: 10px" id="email_sending" ></span></td>
     </tr>
   </table>
 <% end -%>
