--- a/public/stylesheets/new.css
+++ b/public/stylesheets/new.css
@@ -917,3 +917,13 @@ textarea.comment { width: 500px; height: 100px; border: 3px solid #cccccc; paddi
     padding: 7px 14px;
     background-color: #dcdcdc;
 }
+
+.group_cb{
+    display: table-cell;
+    width: 33%;
+}
+
+.group_cb label{
+    font-weight: normal;
+    font-size: 12px;
+}
