--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -4,7 +4,7 @@
 <%= render(:partial => "/contacts/import_form") -%>
 
 <% @college = College.all %>
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:method => :put}, :validate => true) do |f| %>
+<% form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:method => :put}, :validate => true) do |f| %>
     <%= devise_error_messages! %>
 
     <div class="field">
@@ -27,6 +27,10 @@
     <div class="field">
       <span class="required">*</span><%= f.label :email, "Email:" %>
       <%= f.text_field :email, :validate =>{:presence => true, :confirmation => true} %>
+    </div>
+    <div class="field">
+      <span class=""></span><%= f.label :censor_text, "Censor Text?" %>
+      <%= f.check_box(:censor_text, :validate =>{:presence => true, :confirmation => true}) %>
     </div>
     <% if session[:provider].nil? %>
         <div class="field">
